--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="" />
         <title>Matt's Personal Site</title>
         <link href="css/defaultstyles.css" rel="stylesheet" />
-        <link href="paper-kit-2-html-v2.2.0/assets/css/paper-kit.css" rel="stylesheet"/>
+        <link href="paper-kit.css" rel="stylesheet"/>
         <link href="styles.css" rel="stylesheet" />
     </head>
 
