--- a/index.html
+++ b/index.html
@@ -104,41 +104,41 @@
             <div class="container-fluid p-0">
                 <div class="customflex row no-gutters">
                     <div class="card col-5" >
-                        <a class="portfolio-box" href="https://github.com/ShrillHarrier/Turret-Warfare"
+                        <div class="portfolio-box" 
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-name">Turret Warfare</div>
-                            </div></a>
+                            </div></div>
                         <p class="card-text">A turret-defense game based in a military setting.</p>
                         <br>
                         <p class="card-text">Langauges: Unity, C#, Google Drawings</p>
                     </div>
                     <div class="card col-5">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg"
+                        <div class="portfolio-box"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-name">This Website</div>
-                            </div></a>
+                            </div></div>
                         <p class="card-text">My webpage showcasing my professional and personal skills.</p>
                         <br>
                         <p class="card-text">Langauges: HTML, CSS, BootStrap4, Javascript</p>
                     </div>
                     <div class="card col-5">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg"
+                        <div class="portfolio-box" 
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-name">Scribble App</div>
-                            </div></a>
+                            </div></div>
                         <p class="card-text">A software application useful for quick ideas and sketchs.</p>
                         <br>
                         <p class="card-text">Langauges: Python3, TKinter</p>
                     </div>
                     <div class="card col-5">
-                            <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg"
+                            <div class="portfolio-box" 
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-name">Calculator Puzzle Solver</div>
-                            </div></a>
+                            </div></div>
                             <p class="card-text">A program that can solve all puzzles for the popular mobile app "Calculator: The Game".</p>
                             <p class="card-text">Langauges: Java</p>
                     </div>
