fixed project links

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="customflex row no-gutters">
                     <div class="card col-5" >
                         <div class="portfolio-box" 
-                            ><img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
+                            ><img src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-name">Turret Warfare</div>
                             </div></div>
@@ -115,7 +115,7 @@
                     </div>
                     <div class="card col-5">
                         <div class="portfolio-box"
-                            ><img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
+                            ><img src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-name">This Website</div>
                             </div></div>
@@ -125,7 +125,7 @@
                     </div>
                     <div class="card col-5">
                         <div class="portfolio-box" 
-                            ><img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
+                            ><img src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-name">Scribble App</div>
                             </div></div>
@@ -135,7 +135,7 @@
                     </div>
                     <div class="card col-5">
                             <div class="portfolio-box" 
-                            ><img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
+                            ><img src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-name">Calculator Puzzle Solver</div>
                             </div></div>
