--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             <div class="portfolio-box-caption">
                                 <div class="project-name">Scribble App</div>
                             </div></div>
-                        <p class="card-text">A software application useful for quick ideas and sketchs.</p>
+                        <p class="card-text">A software application useful for quick ideas and sketching.</p>
                         <br>
                         <p class="card-text">Langauges: Python3, TKinter</p>
                     </div>
