Word choice edit

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             </div></div>
                         <p class="card-text">A turret-defense game based in a military setting.</p>
                         <br>
-                        <p class="card-text">Langauges: Unity, C#, Google Drawings</p>
+                        <p class="card-text">Tools: Unity, C#, Google Drawings</p>
                     </div>
                     <div class="card col-5">
                         <div class="portfolio-box"
@@ -121,7 +121,7 @@
                             </div></div>
                         <p class="card-text">My webpage showcasing my professional and personal skills.</p>
                         <br>
-                        <p class="card-text">Langauges: HTML, CSS, BootStrap4, Javascript</p>
+                        <p class="card-text">Tools: HTML, CSS, BootStrap4, Javascript</p>
                     </div>
                     <div class="card col-5">
                         <div class="portfolio-box" 
@@ -131,7 +131,7 @@
                             </div></div>
                         <p class="card-text">A software application useful for quick ideas and sketching.</p>
                         <br>
-                        <p class="card-text">Langauges: Python3, TKinter</p>
+                        <p class="card-text">Tools: Python3, TKinter</p>
                     </div>
                     <div class="card col-5">
                             <div class="portfolio-box" 
@@ -140,7 +140,7 @@
                                 <div class="project-name">Calculator Puzzle Solver</div>
                             </div></div>
                             <p class="card-text">A program that can solve all puzzles for the popular mobile app "Calculator: The Game".</p>
-                            <p class="card-text">Langauges: Java</p>
+                            <p class="card-text">Tools: Java, Eclipse</p>
                     </div>
                 </div>
             </div>
